test/core/seman/variant_subtype30.v3
//@seman = UnresolvedIdentifier @ 9:9
// Bare subtype name "B" is not directly accessible as a top-level name
type A {
	case X;
	case _;
}
type A.B {}
def foo() -> int {
	var v = B.new;  // error: B is not a top-level identifier
	return 0;
}
